--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "graphql": "^0.10.5",
     "rollup": "^0.45.2",
     "rollup-plugin-babel": "3.0.0",
     "rollup-plugin-commonjs": "^8.1.0",
