--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "Bleeding Edge",
   "author": "OK GROW! <hello@okgrow.com> (https://www.okgrow.com)",
   "homepage": "https://github.com/okgrow/guides",
-  "keywords": ["graphql", "markdown"],
+  "keywords": [
+    "graphql",
+    "markdown"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/okgrow/guides.git"
@@ -16,7 +19,7 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "format": "prettier-eslint --write \"src/**/*.js\"",
     "prepare": "npm run rollup:build",
     "rollup:build": "BABEL_ENV=build rollup -c",
@@ -35,6 +38,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -52,6 +56,7 @@
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.1.0",
     "graphql": "^0.10.5",
+    "jest": "^20.0.4",
     "prettier": "^1.5.3",
     "prettier-eslint-cli": "^4.1.1",
     "rollup": "^0.45.2",
@@ -62,5 +67,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
