--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "description": "Bleeding Edge",
   "author": "OK GROW! <hello@okgrow.com> (https://www.okgrow.com)",
   "homepage": "https://github.com/okgrow/guides",
-  "keywords": [
-    "graphql",
-    "markdown"
-  ],
+  "keywords": ["graphql", "markdown"],
   "repository": {
     "type": "git",
     "url": "https://github.com/okgrow/guides.git"
@@ -28,46 +25,44 @@
   "dependencies": {
     "es6-promisify": "^5.0.0",
     "glob": "^7.1.2",
-    "gray-matter": "^3.0.2",
+    "gray-matter": "^3.0.3",
     "marked": "^0.3.6",
     "nedb": "^1.8.0"
   },
   "peerDependencies": {
-    "graphql": "^0.10.5"
+    "graphql": "^0.11.2"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
+    "babel-jest": "^21.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "babel-runtime": "^6.25.0",
-    "core-js": "^2.5.0",
-    "eslint": "^4.3.0",
+    "babel-runtime": "^6.26.0",
+    "core-js": "^2.5.1",
+    "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-graphql": "^1.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-prettier": "^2.1.2",
-    "eslint-plugin-react": "^7.1.0",
-    "graphql": "^0.10.5",
-    "jest": "^20.0.4",
-    "prettier": "^1.5.3",
-    "prettier-eslint-cli": "^4.1.1",
-    "rollup": "^0.45.2",
-    "rollup-plugin-babel": "3.0.0",
-    "rollup-plugin-commonjs": "^8.1.0",
+    "eslint-plugin-prettier": "^2.2.0",
+    "eslint-plugin-react": "^7.3.0",
+    "graphql": "^0.11.2",
+    "jest": "^21.0.1",
+    "prettier": "^1.6.1",
+    "prettier-eslint-cli": "^4.3.0",
+    "rollup": "^0.49.2",
+    "rollup-plugin-babel": "3.0.2",
+    "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-filesize": "^1.4.2",
     "rollup-plugin-graphql": "^0.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1"
   },
-  "files": [
-    "dist"
-  ]
+  "files": ["dist"]
 }
