--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^7.3.0",
     "graphql": "^0.11.2",
+    "graphql-tools": "^1.2.2",
     "jest": "^21.0.1",
+    "jest-transform-graphql": "^2.1.0",
     "prettier": "^1.6.1",
     "prettier-eslint-cli": "^4.3.0",
     "rollup": "^0.49.2",
