fix: pass replaceContents options

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "Write markdown, serve as html, query via GraphQL.🔥",
   "author": "OK GROW! <hello@okgrow.com> (https://www.okgrow.com)",
   "homepage": "https://github.com/okgrow/guides",
-  "keywords": ["graphql", "markdown", "html"],
+  "keywords": [
+    "graphql",
+    "markdown",
+    "html"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/okgrow/guides.git"
@@ -65,5 +69,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
