--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -4,22 +4,22 @@
   "author": "OK GROW! <hello@okgrow.com> (https://www.okgrow.com)",
   "license": "MIT",
   "scripts": {
-    "start": "node -r @std/esm index.js",
+    "start": "node -r esm index.js",
     "format": "prettier-eslint --write \"src/**/*.js\""
   },
   "dependencies": {
-    "@std/esm": "^0.19.1",
-    "express": "^4.15.4",
-    "express-graphql": "^0.6.11",
-    "graphql": "^0.11.2",
-    "graphql-tools": "^2.17.0"
+    "esm": "^3.0.23",
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^2.24.0"
   },
   "devDependencies": {
-    "prettier": "^1.6.1",
-    "prettier-eslint-cli": "^4.3.0"
+    "prettier": "^1.12.1",
+    "prettier-eslint-cli": "^4.7.1"
   },
-  "@std/esm": {
-    "esm": "all",
+  "esm": {
+    "mode": "all",
     "cjs": true
   }
 }
