--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@okgrow/graphql-markdown",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "description": "Write markdown, serve as html, query via GraphQL.🔥",
   "author": "OK GROW! <hello@okgrow.com> (https://www.okgrow.com)",
-  "homepage": "https://github.com/okgrow/guides",
+  "homepage": "https://github.com/okgrow/graphql-markdown",
   "keywords": [
     "graphql",
     "markdown",
@@ -12,10 +12,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/okgrow/guides.git"
+    "url": "https://github.com/okgrow/graphql-markdown"
   },
   "bugs": {
-    "url": "https://github.com/okgrow/guides/issues"
+    "url": "https://github.com/okgrow/graphql-markdown/issues"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
